# jngl-starter

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/: template_name
src/: Control.cpp  Control.hpp  Fonts.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Options.cpp  Options.hpp  constants.cpp  constants.hpp  helper.hpp  main.cpp
src/engine/: Fade.cpp  Fade.hpp  Singleton.hpp  datafiles.hpp.in
windows/: installer.nsi
